# scholar-wizard

./: .gitignore  README.md  main.py  pyproject.toml
scholar_wizard/: __init__.py  logs.py  paths.py  static.py
scholar_wizard/libs/: file_handling.py  logs.py  scholar_utils.py  utils.py
scholar_wizard/search/: __init__.py  index.py  utils.py
scholar_wizard/snowball/: __init__.py  index.py
src/: config.py  paths.py  scholar.py
src/libs/: file_handling.py  utils.py
src/search/: index.py  utils.py
