[tool.poetry]
name = "scholar_wizard"
version = "0.1.0"
description = "Facilitate searching the Google Scholar database"
authors = ["PetrCala <cala.p@seznam.cz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
scholarly = "^1.7.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
